<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards</string>
    <string name="new_game">Create New Game</string>
    <string name="display_name">Enter Display Name</string>
    <string name="game_number">Enter Game Number</string>
    <string name="join_game">Join Existing Game</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ace_of_spades">Ace of Spades</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">Start Game</string>

</resources>
