<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/new_game"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray" />

    <EditText
        android:id="@+id/display_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/join_game_button"
        android:ems="10"
        android:hint="@string/display_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@color/white"
        android:textColorHint="@color/white" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_game_button"
        android:layout_alignLeft="@+id/new_game_button"
        android:layout_alignRight="@+id/new_game_button"
        android:enabled="false"
        android:text="@string/join_game"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray" />

    <EditText
        android:id="@+id/game_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/join_game_button"
        android:layout_alignLeft="@+id/join_game_button"
        android:layout_alignRight="@+id/new_game_button"
        android:ems="10"
        android:hint="@string/game_number"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgray" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_number_text"
        android:layout_alignLeft="@+id/display_name_text"
        android:layout_below="@+id/display_name_text"
        android:contentDescription="@string/ace_of_spades"
        android:src="@drawable/card_back_trimmed" />

</RelativeLayout>
